[project]
name = "ap-screenshot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imagehash>=4.3.1",
    "opencv-python>=4.10.0.84",
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.2.5",
    "tqdm>=4.67.1",
]
